[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg-01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/System6-UI-Slice.png" type="Texture" id=3]
[ext_resource path="res://Styles/Button-Default.tres" type="StyleBox" id=4]
[ext_resource path="res://Sprites/System6-Slice2.png" type="Texture" id=5]
[ext_resource path="res://Fonts/Chicago.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 96
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 12
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 4
font_data = ExtResource( 6 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 512.0
margin_bottom = 342.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Menu" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 280.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 12
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
editor/display_folded = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -51.0
margin_bottom = -19.0
alignment = 1

[node name="Help" type="Button" parent="Menu/HBoxContainer"]
margin_left = 44.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Help"

[node name="Play" type="Button" parent="Menu/HBoxContainer"]
margin_left = 144.0
margin_right = 240.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Play"

[node name="Quit" type="Button" parent="Menu/HBoxContainer"]
margin_left = 244.0
margin_right = 340.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Quit"

[node name="Title" type="Label" parent="Menu"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "P.NG"
align = 1
valign = 1

[node name="About" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 64.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 280.0
texture = ExtResource( 3 )
patch_margin_left = 4
patch_margin_top = 12
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Back" type="Button" parent="About"]
margin_left = 144.0
margin_top = 165.0
margin_right = 240.0
margin_bottom = 197.0
rect_min_size = Vector2( 96, 0 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Back"

[node name="Title" type="Label" parent="About"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -97.0
margin_bottom = -57.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "About P.NG"
align = 1
valign = 1
clip_text = true

[node name="Copy" type="Label" parent="About"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -54.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "First to 3 points wins!
W/S - Player 1 Up/Down
Up/Down Arrows - Player 2 Up/Down
Created in Godot by CLD."
align = 1
valign = 1
clip_text = true
[connection signal="pressed" from="Menu/HBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="About/Back" to="." method="_on_Back_pressed"]
